fix broken colorpicker (template view)

--- a/app/views/admin/site_steps/template.html.erb
+++ b/app/views/admin/site_steps/template.html.erb
@@ -49,6 +49,39 @@
 
     </div>
   </div>
+
+  <script type="text/javascript">
+    $(function () {
+      var themeColorContainer = document.querySelector('.js-theme-color');
+      var input = themeColorContainer.querySelector('input');
+      var colorLabel = themeColorContainer.querySelector('.js-label');
+      var preview = themeColorContainer.querySelector('.js-preview');
+
+      // We initialize the preview with the saved color
+      preview.style.backgroundColor = input.value;
+
+      input.addEventListener('change', function () {
+        preview.style.backgroundColor = input.value;
+      });
+
+      colorLabel.addEventListener('keydown', function (e) {
+        if (e.keyCode === 13 || e.keyCode === 32) {
+          this.click();
+        }
+      });
+
+      var templateLabels = document.querySelectorAll('.js-template-label');
+      for (var i = 0, j = templateLabels.length; i < j; i++) {
+        templateLabels[i].addEventListener('keydown', function (e) {
+          if (e.keyCode === 13 || e.keyCode === 32) {
+            this.click();
+          }
+        });
+      }
+
+    })
+  </script>
+
   <%= render partial: 'footer', locals: { f: f } %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
