test for subscription modal (mapbuilder)

--- a/app/assets/stylesheets/components/shared/c-modal.scss
+++ b/app/assets/stylesheets/components/shared/c-modal.scss
@@ -72,7 +72,7 @@
 
 // NEW REACT MODAL STYLES
 // REMOVE THE CODE ABOVE WHEN BACKBONE IS GONE
-.modal {
+.modal_react {
   position: fixed;
   top: 0;
   left: 0;
