--- a/app/views/front/_user.html.erb
+++ b/app/views/front/_user.html.erb
@@ -4,7 +4,7 @@
     <a href="#"><%= session[:current_user][:email] %></a>
     <ul>
       <li>
-        <a href="http://www.globalforestwatch.org/my_gfw/subscriptions">My Subscriptions</a>
+        <a href="#" class="triggerMySubscriptions">My Subscriptions</a>
       </li>
       <li>
         <a href="<%= logout_path %>">Logout</a>
