--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -210,35 +210,76 @@
 <div id="root"></div>
 <div id="share-modal" class="modal-wrapper hidden"></div>
 
-<script type="text/javascript">
-  window.route = 'Map';
-</script>
-
 <% content_for :external_js do %>
-    <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.12' %>.js"></script>
-
+  <script id="library-load" src="http://alpha.blueraster.io/gfw-mapbuilder/external-subscriptions/1.2.0.js"></script>
     <script>
-      var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].squish.gsub("'", %q(\\\')).html_safe %>')
-      var mapConfig = Object.assign(mapDatabaseConfig, {
-        language: 'en',
-        title: '<%= @site_page.site.name %>',
-        hideHeader: false,
-        includeMyGFWLogin: true,
-        includeDocumentsTab: true,
-        includeMeasurementTab: true,
-        labels: {
-          en: {
-            title: '<%= @site_page.site.name %>',
-            subtitle: '<%= @site_page.description %>'
+        var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].squish.gsub("'", %q(\\\')).html_safe %>')
+        var mapConfig = Object.assign(mapDatabaseConfig, {
+          language: 'en',
+          title: '<%= @site_page.site.name %>',
+          hideHeader: true,
+          includeMyGFWLogin: false,
+          includeDocumentsTab: true,
+          includeMeasurementTab: true,
+          labels: {
+            en: {
+              title: '<%= @site_page.site.name %>',
+              subtitle: '<%= @site_page.description %>'
+            }
           }
-        }
-      });
+        });
 
-      var ll = new MapBuilder({
-        el: 'root', // We need a div ID, not a class
-        config: mapConfig,
-        version: '<%= @site_page.content['version'] || '1.1.15' %>'//,
-        //base: ""
-      });
+
+        var triggerCustom = function() {
+        const subscriptions = [{
+            'type': 'subscription',
+            'id': '5af2197db824a311006f38ed',
+            'attributes': {
+                'name': 'test for date',
+                'createdAt': '2018-05-08T21:41:17.808Z',
+                'userId': '588f5dda35c8259767ed15ab',
+                'resource': {
+                    'type': 'EMAIL',
+                    'content': 'lc07@uw.edu'
+                },
+                'datasets': ['umd-loss-gain'],
+                'params': {
+                    'iso': {
+                        'subRegion': null,
+                        'region': null,
+                        'country': null
+                    },
+                    'wdpaid': null,
+                    'use': null,
+                    'useid': null,
+                    'geostore': '8dcf1b5fe27b2b8dfa392b346f778f5f'
+                },
+                'confirmed': false,
+                'language': 'en',
+                'datasetsQuery': []
+            }
+        }];
+
+        const customEvent = new CustomEvent('listenToThisSubscriptionCall', { detail: subscriptions});
+        console.log('customEvent', customEvent);
+        window.dispatchEvent(customEvent);
+      }
+
+        var ll = new MapBuilder({
+          el: 'root', // We need a div ID, not a class
+          config: mapConfig,
+          subscriptionEventName: 'listenToThisSubscriptionCall',
+          version: '1.2.0'//,
+          //base: ""
+        });
+
     </script>
 <% end %>
+
+<script type="text/javascript">
+  window.route = 'Map';
+  $( "body" ).on( "click", ".triggerMySubscriptions", function(e) {
+    e.preventDefault();
+    triggerCustom();
+  });
+</script>
