fix mobile header not opening
problem was that we where initializing 2 header views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 
   <script>
     $(function () {
-      if (window.App) {
+      if (window.App && window.route === 'Homepage') {
         if (!document.querySelector('.js-header').classList.contains('initialized')) {
         new App.View.HeaderView({
           el: document.querySelector('.js-header')
