--- a/app/views/management/page_steps/open_content_v2.html.erb
+++ b/app/views/management/page_steps/open_content_v2.html.erb
@@ -10,7 +10,14 @@
   </div>
 <% end %>
 
-  hello new open content page
+<%= render partial: 'shared/navigation_header', locals: \
+  {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
+  invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
+
+<%= form_for(@page, url: wizard_path, method: :put, :html => { :class => 'js-form' }) do |f| %>
+  <div class="l-page-creation -wysiwyg">
+      hello open content v2
+  </div>
 
   <%= render partial: 'management/steps_shared/footer', locals: {f: f, no_continue: true, always_save: true, publish: !@page.enabled} %>
   <%= render partial: 'shared/errors', locals: { resource: @page } %>
