Basic UI of the new dashboard

--- a/app/views/site_page/dashboard_v2.html.erb
+++ b/app/views/site_page/dashboard_v2.html.erb
@@ -11,9 +11,7 @@
 } ) %>
 
 <div class="fa-dashboard">
-  <%= react_component('PublicDashboard', {
-    page: @site_page
-  } ) %>
+  <%= react_component('public/Dashboard') %>
 </div>
 
 <%= render 'front/footer' %>
