--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -11,6 +11,7 @@
     transform: translate(-200%, 0) rotate(45deg) ;
     background-color: $color-4;
     content: '';
+    z-index: 1; // Necessary for the disabled styles
   }
 
   &::after {
@@ -46,6 +47,11 @@
       text-transform: uppercase;
     } @else {
       border: 0;
+    }
+
+    &[disabled] {
+      opacity: .8;
+      filter: grayscale(90%);
     }
   }
 
