--- a/app/assets/stylesheets/components/shared/c-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-tabs.scss
@@ -16,11 +16,42 @@
     padding: 0 $wrapper-padding;
   }
 
+  &.-secondary {
+    position: relative;
+    background-color: rgba($color-1, .1);
+
+    &:after {
+      display: block;
+      width: 100%;
+      height: 1px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background: $color-1;
+      content: '';
+    }
+
+    > .tab {
+      padding: 0 50px;
+      border: 1px solid transparent;
+      border-bottom: none;
+      text-transform: none;
+      color: $color-4;
+      font-size: $font-size-small;
+      z-index: 1;
+
+      &[aria-selected="true"] {
+        border-color: $color-1;
+      }
+    }
+  }
+
   > .tab {
     line-height: 50px;
     text-align: center;
     text-transform: uppercase;
     cursor: pointer;
+    background-color: transparent;
 
     &[aria-selected='true'] {
       background-color: $color-3;
