--- a/app/assets/stylesheets/front/application-theme-carpe.scss
+++ b/app/assets/stylesheets/front/application-theme-carpe.scss
@@ -2,6 +2,9 @@
 $color-1:#97BE32;
 
 @import
+'../../../node_modules/widget-editor/dist/styles.min',
+'../../../node_modules/rc-slider/assets/index',
+'../../../node_modules/react-select/dist/react-select',
 'leaflet',
 '../helpers',
 'settings-theme-carpe',
