--- a/app/assets/stylesheets/components/shared/c-loading-spinner.scss
+++ b/app/assets/stylesheets/components/shared/c-loading-spinner.scss
@@ -17,6 +17,11 @@ $spinner-velocity: 0.6s;
     height: 100%;
   }
 
+  &.-inline {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
   &.-bg {
     width: 100%;
     height: 100%;
@@ -61,6 +66,11 @@ $spinner-velocity: 0.6s;
 
   &.-big::after {
     border-width: $spinner-width * 2;
+  }
+
+  &.-small::after {
+    width: $spinner-size / 1.5;
+    height: $spinner-size / 1.5;
   }
 
   &.-btn {
