The site's title is now the correct one

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title><%= ForestAtlasLandscapeCms::Application.config.site_name %></title>
+  <title><%= @site_page.site.name %></title>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="<%= @site_page.description %>">
