--- a/app/assets/stylesheets/components/shared/c-loading-spinner.scss
+++ b/app/assets/stylesheets/components/shared/c-loading-spinner.scss
@@ -23,6 +23,7 @@ $spinner-velocity: 0.6s;
   }
 
   &.-bg {
+    position: absolute;
     width: 100%;
     height: 100%;
 
@@ -37,14 +38,15 @@ $spinner-velocity: 0.6s;
       background-color: rgba($spinner-bg-color, 0.2);
     }
 
+    &::after {
+      z-index: 2;
+    }
+
     &.-blank {
       &::before {
         border: 1px solid $color-13;
         border-radius: 4px;
         background-color: $color-3;
-      }
-      &::after {
-        z-index: 2;
       }
     }
   }
