--- a/app/assets/stylesheets/components/shared/c-loading-spinner.scss
+++ b/app/assets/stylesheets/components/shared/c-loading-spinner.scss
@@ -17,7 +17,13 @@ $spinner-velocity: 0.6s;
     height: 100%;
   }
 
+  &.-inline {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
   &.-bg {
+    position: absolute;
     width: 100%;
     height: 100%;
 
@@ -32,14 +38,15 @@ $spinner-velocity: 0.6s;
       background-color: rgba($spinner-bg-color, 0.2);
     }
 
+    &::after {
+      z-index: 2;
+    }
+
     &.-blank {
       &::before {
         border: 1px solid $color-13;
         border-radius: 4px;
         background-color: $color-3;
-      }
-      &::after {
-        z-index: 2;
       }
     }
   }
@@ -61,6 +68,11 @@ $spinner-velocity: 0.6s;
 
   &.-big::after {
     border-width: $spinner-width * 2;
+  }
+
+  &.-small::after {
+    width: $spinner-size / 1.5;
+    height: $spinner-size / 1.5;
   }
 
   &.-btn {
