Update the preview step

--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -113,4 +113,15 @@
     }
   }
 
+  &.-dashboard-preview {
+    .c-dashboard {
+      margin: 70px auto;
+      max-width: $body-max-width;
+    }
+
+    .cw-wysiwyg-toolbar {
+      z-index: 1;
+    }
+  }
+
 }
