--- a/app/views/management/page_steps/dashboard_dataset.html.erb
+++ b/app/views/management/page_steps/dashboard_dataset.html.erb
@@ -5,8 +5,8 @@
   <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
-        <h1>Select a Dataset</h1>
-        <p>Add elements to build your dashboard</p>
+        <h1>Dataset</h1>
+        <p>Select the dataset you want your dashboard to represent.</p>
       </div>
     </div>
   </div>
