--- a/app/views/management/page_steps/dashboard_widget.html.erb
+++ b/app/views/management/page_steps/dashboard_widget.html.erb
@@ -6,7 +6,7 @@
     <div class="wrapper">
       <div class="description">
         <h1>Widget</h1>
-        <p>Choose the widget to add to the page</p>
+        <p>Choose the widget that will be shown in the dashboard.</p>
       </div>
     </div>
   </div>
