--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -3,7 +3,7 @@
 
   .c-dashboard-filters {
     max-width: $content-max-width;
-    margin: 0 auto;
+    margin: 50px auto 0;
     margin-bottom: 30px;
   }
 
@@ -83,5 +83,9 @@
       position: static;
       transform: none;
     }
+  }
+
+  .visualization-container {
+    margin-bottom: 50px;
   }
 }
