--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -19,7 +19,7 @@
 
   <div class="wrapper">
 
-    <div class="fa-dashboard">
+    <div class="fa-dashboard legacy-dashboard">
       <%= react_component('PublicDashboard', {
         page: @site_page
       } ) %>
