use default behaviour for lists within the ql editor

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -45,6 +45,18 @@ ul {
   }
 }
 
+// XXX : we default everything to inline layout like above
+// so we turn back to browser defaults for list items within the wysiwyg
+.ql-editor {
+  ul {
+    display: block;
+    list-style: initial;
+    li {
+      display: block;
+    }
+  }
+}
+
 a {
   text-decoration: none;
 }
