keep consistant dropdown logic, use hover to show the options in admin

--- a/app/assets/stylesheets/components/shared/c-header-admin.scss
+++ b/app/assets/stylesheets/components/shared/c-header-admin.scss
@@ -83,7 +83,12 @@
 .c-dropdown {
   position: relative;
 
+  &:hover .options {
+    display: block;
+  }
+
   button {
+    cursor: pointer;
     display: block;
     border: none;
     background: none;
