--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -9,10 +9,8 @@
 <footer class="c-footer">
   <div class="wrapper">
     <ul class="site-links-list">
-      <li class="site-link-item"><%= link_to 'Terms of Service', "/#{PageTemplate::TERMS_OF_SERVICE_SLUG}", class: 'site-link' %></li>
-      <li class="site-link-item"><%= link_to 'Privacy Policy', "/#{PageTemplate::PRIVACY_POLICY_SLUG}", class: 'site-link' %></li>
+      <li class="site-link-item"><%= link_to 'Terms of Service', "/#{PageTemplate::TERMS_OF_SERVICE_SLUG}", class: 'site-link' %></li><li class="site-link-item"><%= link_to 'Privacy Policy', "/#{PageTemplate::PRIVACY_POLICY_SLUG}", class: 'site-link' %></li>
       <% unless @site_page.site.site_settings.contact_email_address(@site_page.site_id).value.empty? -%>
-        <li class="separator"> |</li>
         <li class="site-link-item"><%= link_to 'Contact us', 'mailto:' + @site_page.site.site_settings.contact_email_address(@site_page.site_id).value, class: 'site-link' %></li>
       <% end %>
     </ul>
