--- a/app/assets/stylesheets/front/_template-fa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-fa.css.scss.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 @import
+'../../../node_modules/widget-editor/dist/styles.min',
+'../../../node_modules/rc-slider/assets/index',
+'../../../node_modules/react-select/dist/react-select',
 'leaflet',
 '../../app/assets/stylesheets/helpers',
 '../../app/assets/stylesheets/front/settings-theme-fa',
