--- a/app/assets/stylesheets/front/_settings-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-lsa.scss
@@ -64,9 +64,10 @@ $color-10: darken(saturate($color-1, 10%), 5%);
 $color-11: #fff00e;
 $color-12: #dd3e21;
 $color-13: #dededd;
-$color-14:  #ff706c;
-$color-15:  #404040;
+$color-14: #ff706c;
+$color-15: #404040;
 $color-16: tint($color-1, 85%);
+$color-17: #0B0908;
 
 // General layout
 $body-max-width:         1280px;
