--- a/app/assets/stylesheets/components/front/c-footer.scss
+++ b/app/assets/stylesheets/components/front/c-footer.scss
@@ -1,9 +1,11 @@
 .c-pre-footer {
   padding: 15px 0;
 
-  @if $theme == 2 {
+  @if $theme == 2 or $theme == 3 {
     background-color: rgba($color-6, .2);
-  } @else {
+  }
+
+  @if $theme == 1 {
     background-color: rgba($color-1, .2);
   }
 }
@@ -11,9 +13,15 @@
 .c-footer {
   padding: 15px 0;
 
+  @if $theme == 3 {
+    background-color: rgba($color-17, .75);
+  }
+
   @if $theme == 2 {
     background-color: $color-6;
-  } @else {
+  }
+
+  @if $theme == 1 {
     font-size: $font-size-normal;
     background-color: $color-1;
   }
@@ -34,6 +42,11 @@
   > .wrapper {
     height: 100%;
 
+    @if $theme == 3 {
+      max-width: $body-max-width;
+      margin: 0 auto;
+    }
+
     @media #{$mq-tablet} {
       display: flex;
       align-items: center;
@@ -42,9 +55,11 @@
   }
 
   .separator {
-    @if $theme == 2 {
+    @if $theme == 2 or $theme == 3 {
       color: $color-4;
-    } @else {
+    }
+
+    @if $theme == 1 {
       color: rgba($color-3, .1);
     }
   }
@@ -56,7 +71,7 @@
         margin: 0 3px;
         content: '|';
 
-        @if $theme == 1 {
+        @if $theme == 1 or $theme == 3 {
           color: rgba($color-3, .3);
         }
 
@@ -72,7 +87,7 @@
       }
 
       > .site-link {
-        @if $theme == 1 {
+        @if $theme == 1 or $theme == 3 {
           color: $color-3;
           text-decoration: none;
         }
@@ -134,7 +149,9 @@
 
           @if $theme == 2 {
             fill: $color-1;
-          } @else {
+          }
+
+          @if $theme == 1 or $theme == 3 {
             fill: $color-3;
           }
         }
