--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -3,9 +3,20 @@
   font-family: $font-family-1; // Needed as the map CSS overrides it
   z-index: 12;
 
+  @if $theme == 3 {
+    @media #{$mq-navbar} {
+      position: absolute;
+      width: 100vw;
+      background: rgba($color-17, .75);
+      color: $color-3;
+    }
+  }
+
   @if $theme == 2 {
     color: $color-3;
-  } @else {
+  }
+
+  @if $theme == 1 or $theme == 3 {
     color: $color-1;
     font-size: $font-size-normal;
   }
@@ -13,7 +24,9 @@
   a {
     @if $theme == 2 {
       background-color: transparent;
-    } @else {
+    }
+
+    @if $theme == 1 or $theme == 3 {
       text-decoration: none;
     }
   }
@@ -37,9 +50,15 @@
       padding: 0 $wrapper-padding;
     }
 
+    @if $theme == 3 {
+      background-color: $color-17;
+    }
+
     @if $theme == 2 {
       background-color: $color-7;
-    } @else {
+    }
+
+    @if $theme == 1 {
       background-color: $color-1;
     }
 
@@ -115,9 +134,15 @@
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 
+    @if $theme == 3 {
+      background-color: $color-17;
+    }
+
     @if $theme == 2 {
       background-color: $color-7;
-    } @else {
+    }
+
+    @if $theme == 1 {
       background-color: $color-1;
     }
 
@@ -194,7 +219,9 @@
 
         @if $theme == 2 {
           background-color: $color-7;
-        } @else {
+        }
+
+        @if $theme == 1 or $theme == 3 {
           background-color: $color-1;
         }
 
@@ -208,7 +235,9 @@
           &:hover {
             @if $theme == 2 {
               background-color: $color-7;
-            } @else {
+            }
+
+            @if $theme == 1 or $theme == 3 {
               background-color: $color-1;
             }
           }
@@ -216,7 +245,9 @@
           &.-active {
             @if $theme == 2 {
               background-color: $color-7;
-            } @else {
+            }
+
+            @if $theme == 1 or $theme == 3 {
               background-color: $color-1;
             }
             opacity: 0.5;
@@ -233,9 +264,17 @@
     display: none;
     height: 50px;
 
+    @if $theme == 3 {
+      max-width: $body-max-width;
+      margin: 0 auto;
+      background: transparent
+    }
+
     @if $theme == 2 {
       background-color: $color-7;
-    } @else {
+    }
+
+    @if $theme == 1 {
       background-color: $color-3;
     }
 
@@ -296,12 +335,18 @@
 
           > a {
             padding: 0;
+
+            @if $theme == 3 {
+              color: $color-3;
+            }
           }
 
           &.-active {
-            @if $theme == 2 {
+            @if $theme == 2 or $theme == 3 {
               background-color: rgba($color-3, .1);
-            } @else {
+            }
+
+            @if $theme == 1 {
               background-color: rgba($color-1, .1);
             }
           }
@@ -311,7 +356,9 @@
             &:not(:first-of-type) {
               @if $theme == 2 {
                 border-right: 1px solid rgba($color-3, .1);
-              } @else {
+              }
+
+              @if $theme == 1 or $theme == 3 {
                 border-right: 1px solid rgba($color-1, .1);
               }
             }
@@ -340,21 +387,36 @@
               display: none; // Also hide paint calculations
               will-change: transform, opacity;
 
+              @if $theme == 3 {
+                background-color: rgba($color-17, .75);
+              }
+
               li {
                 display: block;
-                border-bottom: 1px solid $color-9;
                 text-align: center;
                 line-height: 1.3;
                 text-transform: none;
+
+                @if $theme == 3 {
+                  border-bottom: 1px solid rgba($color-9, .2);
+                } @else {
+                  border-bottom: 1px solid $color-9;
+                }
 
                 @if $theme == 2 {
                   color: $color-6;
                 }
 
                 &:hover {
+                  @if $theme == 3 {
+                    background-color: rgba($color-17, .3);
+                  }
+
                   @if $theme == 2 {
                     background-color: $color-8;
-                  } @else {
+                  }
+
+                  @if $theme == 1 {
                     background-color: rgba($color-1, .1);
                   }
                 }
@@ -364,6 +426,10 @@
                   width: 100%;
                   height: 100%;
                   padding: 15px 5px;
+
+                  @if $theme == 3 {
+                    color: $color-3;
+                  }
 
                   @if $theme == 1 {
                     color: $color-6;
@@ -425,10 +491,18 @@
         width: 100%;
         content: '';
 
+        @if $theme == 3 {
+          top: 50px;
+          height: 30px;
+          background-color: rgba($color-17, .9);
+        }
+
         @if $theme == 2 {
           height: 25px;
           background-color: rgba($color-7, .7);
-        } @else {
+        }
+
+        @if $theme == 1 {
           top: 50px;
           height: 30px;
           background-color: rgba($color-1, .7);
@@ -454,7 +528,9 @@
 
         @if $theme == 2 {
           line-height: 25px;
-        } @else {
+        }
+
+        @if $theme == 1 or $theme == 3 {
           line-height: 17px;
         }
 
@@ -463,8 +539,13 @@
 
           li {
             height: 100%;
-            font-weight: $font-weight-bold;
             text-transform: uppercase;
+
+            @if $theme == 3 {
+              font-weight: $font-weight-normal;
+            } @else {
+              font-weight: $font-weight-bold;
+            }
 
             @if $theme == 1 {
               padding-top: 2px;
@@ -490,7 +571,7 @@
             border-left: 1px solid rgba($color-3, .2);
             letter-spacing: .1px;
 
-            @if $theme == 1 {
+            @if $theme == 1 or $theme == 3 {
               padding-top: 5px;
             }
 
@@ -499,9 +580,11 @@
             }
 
             &.-active {
-              @if $theme == 2 {
+              @if $theme == 2 or $theme == 3 {
                 background-color: rgba($color-3, .1);
-              } @else {
+              }
+
+              @if $theme == 1 {
                 background-color: rgba($color-1, .1);
               }
             }
@@ -522,14 +605,16 @@
 
     @if $theme == 2 {
       background-color: $color-7;
-    } @else {
+    }
+
+    @if $theme == 1 or $theme == 3 {
       background-color: $color-1;
     }
 
     > div {
       flex-grow: 1;
 
-      @if $theme == 1 {
+      @if $theme == 1 or $theme == 3 {
         display: none;
       }
     }
