--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -11,7 +11,12 @@
   // Undoing some styles of the wysiwyg editor
   .ql-disabled {
     font-family: inherit;
-    font-size: inherit;
+
+    @if $theme == 3 {
+      font-size: $font-size-normal;
+    } @else {
+      font-size: inherit;
+    }
 
     .ql-editor {
       padding: 0;
@@ -50,10 +55,18 @@
       font-size: $font-size-x-big;
     }
 
+    @if $theme == 3 {
+      color: $color-4;
+      font-weight: $font-weight-bold;
+      line-height: 1.25;
+    }
+
     @if $theme == 2 {
       color: $color-4;
       font-weight: $font-weight-light;
-    } @else {
+    }
+
+    @if $theme == 1 {
       color: $color-1;
       font-family: $font-family-2;
       font-weight: $font-weight-bold;
@@ -67,10 +80,16 @@
     font-weight: $font-weight-normal;
     line-height: 1.7;
 
+    @if $theme == 3 {
+      color: $color-4;
+    }
+
     @if $theme == 2 {
       color: $color-4;
       letter-spacing: .2px;
-    } @else {
+    }
+
+    @if $theme == 1 {
       color: $color-1;
       letter-spacing: -.3px;
     }
@@ -136,11 +155,22 @@
       font-size: $font-size-medium;
     }
 
+    @if $theme == 3 {
+      color: $color-4;
+      line-height: 1.5;
+
+      @media #{$mq-mobile} {
+        line-height: 1.25;
+      }
+    }
+
     @if $theme == 2 {
       color: $color-4;
       letter-spacing: .2px;
       line-height: 1.1;
-    } @else {
+    }
+
+    @if $theme == 1 {
       color: $color-1;
       font-family: $font-family-2;
       line-height: 1.5;
