--- a/app/assets/stylesheets/components/shared/c-description-dashboard-modal.scss
+++ b/app/assets/stylesheets/components/shared/c-description-dashboard-modal.scss
@@ -20,7 +20,9 @@
       font-size: $font-size-x-big;
       letter-spacing: .7px;
       text-transform: uppercase;
-    } @else {
+    }
+
+    @if $theme == 1 or $theme == 3 {
       font-family: $font-family-2;
       font-size: $font-size-huge;
       letter-spacing: 1.25px;
@@ -36,7 +38,7 @@
     font-size: $font-size-x-normal;
     font-weight: $font-weight-light;
 
-    @if $theme == 1 {
+    @if $theme == 1 or $theme == 3 {
       line-height: 1.6;
     }
   }
