--- a/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
+++ b/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
@@ -68,7 +68,9 @@
 
         @if $theme == 2 {
           background-color: $color-8;
-        } @else {
+        }
+
+        @if $theme == 1 or $theme == 3 {
           background-color: rgba($color-1, .1);
         }
       }
@@ -137,10 +139,12 @@
         border-left: 0;
         content: '';
 
-        @if $theme == 1 {
+        @if $theme == 1 or $theme == 3 {
           border-top: 2px solid $color-1;
           border-right: 2px solid $color-1;
-        } @else {
+        }
+
+        @if $theme == 2 {
           border-top: 2px solid $color-3;
           border-right: 2px solid $color-3;
         }
@@ -160,10 +164,12 @@
         border-left: 0;
         content: '';
 
-        @if $theme == 1 {
+        @if $theme == 1 or $theme == 3 {
           border-top: 2px solid $color-1;
           border-right: 2px solid $color-1;
-        } @else {
+        }
+
+        @if $theme == 2 {
           border-top: 2px solid $color-3;
           border-right: 2px solid $color-3;
         }
