--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -45,7 +45,9 @@
     @if $theme == 2 {
       border: 1px solid $color-1;
       text-transform: uppercase;
-    } @else {
+    }
+
+    @if $theme == 1 or $theme == 3 {
       border: 0;
     }
 
