--- a/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/shared/l-analysis-dashboard.scss
@@ -13,7 +13,7 @@ $secondary-container-initial-width: 400px;
     font-size: $font-size-x-normal;
     font-weight: $font-weight-light;
 
-    @if $theme == 1 {
+    @if $theme == 1 or $theme == 3 {
       line-height: 1.6;
     }
 
