Fix a style issue with the login screen for the Carpe template

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -6,6 +6,7 @@
   @if $theme == 3 {
     @media #{$mq-navbar} {
       position: absolute;
+      top: 0;
       width: 100vw;
       background: rgba($color-17, .75);
       color: $color-3;
