Limit the size of the spinner's overlay on the dashboard

--- a/app/assets/stylesheets/components/shared/c-dashboard-table-view.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard-table-view.scss
@@ -1,4 +1,5 @@
 .c-dashboard-table-view {
+  position: relative; // Limit the size of the spinner's overlay
   min-height: 400px;
 
   .c-loading-spinner {
