--- a/app/views/site_page/dashboard_v2.html.erb
+++ b/app/views/site_page/dashboard_v2.html.erb
@@ -6,7 +6,7 @@
   site: @site_page.site,
   siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
   siteTitleOnly: @site_title_only,
-  image: @main_image,
+  image: @alternative_image,
   pageSize: defined?(size) ? size : nil
 } ) %>
 
