--- a/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
+++ b/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
@@ -9,7 +9,9 @@
     margin: 0 20px;
     width: 300px;
     max-height: 400px;
-    overflow: hidden;
+    // The overflow breaks the dropdown of the select
+    // of the search modal
+    // overflow: hidden;
   }
 }
 
