#159005417 pre footer, allow html

--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -1,4 +1,4 @@
-<% unless @site_page.site.site_settings.pre_footer(@site_page.site_id).value.empty? -%>
+<% unless @site_page.site.site_settings.pre_footer(@site_page.site_id).value.empty? %>
     <div class="c-pre-footer">
       <div class="wrapper">
         <%= raw(@site_page.site.site_settings.pre_footer(@site_page.site_id).value.strip) %>
