Added the html field to the map version

--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -258,7 +258,8 @@
           el: 'root', // We need a div ID, not a class
           config: mapConfig,
           subscriptionEventName: 'listenToThisSubscriptionCall',
-          version: '1.2.0'//,
+          version: '1.2.0',
+          html: '<%= @map_html %>'//,
           //base: ""
         });
 
