--- a/app/views/admin/map_versions/_form.html.erb
+++ b/app/views/admin/map_versions/_form.html.erb
@@ -12,23 +12,27 @@
     <div class="wrapper">
       <div class="c-inputs-container js-urls">
         <div class="container -big">
-
-          <fieldset class="form-group row">
-            <%= f.label :version, class: 'col-sm-2 form-control-label' %>
-            <div class="col-sm-10"><%= f.text_field :version, class: 'form-control' %></div>
-          </fieldset>
-
-          <fieldset class="form-group row">
-            <%= f.label :position, class: 'col-sm-2 form-control-label' %>
-            <div class="col-sm-10"><%= f.number_field :position, class: 'form-control' %></div>
-          </fieldset>
-
-          <fieldset class="form-group row">
-            <%= f.label :description, class: 'col-sm-2 form-control-label' %>
-            <div class="col-sm-10"><%= f.text_field :description, class: 'form-control' %></div>
-          </fieldset>
-
+            <%= f.label :version %>
+            <%= f.text_field :version, placeholder: '1.0' %>
         </div>
+
+        <div class="container -big">
+          <%= f.label :position %>
+          <%= f.number_field :position %>
+        </div>
+
+
+        <div class="container -big">
+          <%= f.label :description %>
+          <%= f.text_field :description, placeholder: 'description' %>
+        </div>
+
+
+        <div class="container">
+          <%= f.label :html %>
+          <%= f.text_area :html, placeholder: 'HTML' %>
+        </div>
+
       </div>
     </div>
   </div>
