Add a requirements message to the custom widget creation/edition
The user is warned about which version of Vega is supported and about removing the `$schema` key from the specification.

--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -56,8 +56,14 @@
           overflow: hidden;
         }
 
+        .textarea-container {
+          display: flex;
+          flex-direction: column;
+          flex-wrap: nowrap;
+        }
+
         .CodeMirror {
-          height: 100%;
+          flex-grow: 1;
         }
 
         .c-we-chart {
