better placeholder for custom map html

--- a/app/views/admin/map_versions/_form.html.erb
+++ b/app/views/admin/map_versions/_form.html.erb
@@ -30,7 +30,7 @@
 
         <div class="container">
           <%= f.label :html %>
-          <%= f.text_area :html, placeholder: 'HTML' %>
+          <%= f.text_area :html, placeholder: 'Custom map html' %>
         </div>
 
       </div>
