--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -211,8 +211,8 @@
 <div id="share-modal" class="modal-wrapper hidden"></div>
 
 <% content_for :external_js do %>
-  <script id="library-load" src="http://alpha.blueraster.io/gfw-mapbuilder/external-subscriptions/1.2.0.js"></script>
-    <script>
+  <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
+  <script>
         var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].squish.gsub("'", %q(\\\')).html_safe %>')
 
         var mapConfig = Object.assign(mapDatabaseConfig, {
@@ -258,10 +258,13 @@
           el: 'root', // We need a div ID, not a class
           config: mapConfig,
           subscriptionEventName: 'listenToThisSubscriptionCall',
-          version: '1.2.0',
-          html: '<%= @map_html %>'//,
+          version: '<%= @site_page.content['version'] || '1.1.15' %>',
+          html: '<%= @map_html %>',
           //base: ""
         });
+
+
+        var test = "<%= @map_html %>";
 
     </script>
 <% end %>
