--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -23,7 +23,7 @@
           <%= f.label :name, 'Page title' %>
           <%= f.text_field :name, placeholder: 'My page' %>
         </div>
-        <% unless @page.content_type == ContentType::HOMEPAGE or @page.content_type == ContentType::HOMEPAGE_V2 %>
+        <% unless @page.content_type == ContentType::HOMEPAGE %>
           <div class="container">
             <%= f.label :description %>
             <%= f.text_area :description, placeholder: 'Add your description here' %>
@@ -33,7 +33,7 @@
             <%= f.text_field :uri, placeholder: 'my-page', :readonly => @page.content_type == ContentType::STATIC_CONTENT %>
           </div>
         <% end %>
-        <% unless @page.content_type == ContentType::HOMEPAGE or @page.content_type == ContentType::HOMEPAGE_V2 or @page.content_type == ContentType::STATIC_CONTENT %>
+        <% unless @page.content_type == ContentType::HOMEPAGE or @page.content_type == ContentType::STATIC_CONTENT %>
           <footer>
             <div class="c-checkbox">
               <%= f.check_box :show_on_menu %>
